--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Suyeon Lee's Portfolio
 email: syeun023@gamil.com
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "호기심 가득한 나의 포트폴리오를 통해 데이터 과학과 분석 프로젝트를 만나보세요.(Explore my curious portfolio featuring data science and analysis projects.)" 
-keywords: "포트폴리오, 데이터 과학자, 데이터 분석가, 프로젝트, 창의성(portfolio, data scientist, data analyst, projects, creativity)"
+keywords: "데이터 과학자, 데이터 분석가, 프로젝트, 창의성(data scientist, data analyst, projects, creativity)"
 skills: "Data Scientist - Data Analyst "
 meta_author: Lee Suyeon
 
@@ -17,7 +17,7 @@ bing_verify:
 # - static : pass through formspree.io to validate email sending
 # - disqus : replace contact form by disqus thread
 # - comment the line below if you want to stick with the default PHP contact form
-contact: static
+# contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
