--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ meta_author: Lee Suyeon
 google_verify:
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
+bing_verify: "your_bing_verification_code"
 
 # Contact form:
 # - static : pass through formspree.io to validate email sending
@@ -21,7 +21,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -32,7 +32,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright:
   location: Location
   social: Around the Web
   credits: Credits
